src/test/deca/syntax/valid/parser/extension/TAB_decl_without_initialization.deca
{
    int i;
    float f;
    int[] x;
    float[] y;
    int[][] a;
    float[][] b;
}