src/test/deca/syntax/invalid/parser/oracle/literal_ident_without_semicolon.deca
{
  int i = 0;
  identifier
}
